replacing posts system with todo
